add lb text below inputs

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <label for="first-lift-value">
                         1st Lift
                         <input id="first-lift-value" name="first-lift-value" type="number" min="0" onchange="update_lifts()" />
+                        <span id="first-lbs"></span>
                     </label>
                     <fieldset id="first-felt">
                         <legend>How did it feel?</legend>
@@ -78,6 +79,7 @@
                     <label for="second-lift-value">
                         2nd Lift
                         <input id="second-lift-value" name="second-lift-value" type="number" min="0" readonly />
+                        <span id="second-lbs"></span>
                     </label>
                     <fieldset id="second-felt">
                         <legend>How did it feel?</legend>
@@ -99,6 +101,7 @@
                     <label for="third-lift-value">
                         3rd Lift
                         <input id="third-lift-value" name="third-lift-value" type="number" min="0" readonly />
+                        <span id="third-lbs"></span>
                     </label>
                 </form>
             </div>
